--- a/WeldingPassportsApp/WeldingPassportsApp/Views/ExamCenters/Create.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/ExamCenters/Create.cshtml
@@ -1,5 +1,4 @@
 ﻿@using WeldingPassportsApp.Stores;
-@inject IViewLocalizer Localizer
 @model ExamCenterCreateViewModel
 
 @{
@@ -12,75 +11,66 @@
 
 <h1>@Localizer["Create Exam Center"]</h1>
 <hr/>
-<div class="row">
-    <div class="col-md-12">
-        <form asp-controller="@typeof(ExamCentersController).GetNameOfController()" asp-action="@nameof(ExamCentersController.Create)" asp-route-returnUrl="@returnUrl" methode="post">
-            <div class="form-group row">
-                <label asp-for="@Model.CompanyID" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                    <div class="input-group">
-                        <select asp-for="@Model.CompanyID" class="form-control" asp-items="@Model.CompanySelectList" onchange="OnChangeCompanyID()">
-                            <option value="" selected disabled hidden>@Localizer["Chooze a company"]</option>
-                        </select>
-                        <div class="input-group-append">
-                            <a class="btn btn-primary" type="b" asp-controller="@typeof(CompaniesController).GetNameOfController()" asp-action="@nameof(CompaniesController.Create)" asp-route-ReturnUrl="@currentUrl">@Localizer["Create"]</a>
-                        </div>
-                        <div class="input-group-append">
-                            <input class="btn btn-primary" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#CompanyID'))" />
-                        </div>
-                    </div>
-                    <span asp-validation-for="@Model.CompanyID" class="text-danger"></span>
-                </div>
+<form asp-controller="@typeof(ExamCentersController).GetNameOfController()" asp-action="@nameof(ExamCentersController.Create)" 
+      asp-route-returnUrl="@returnUrl" methode="post" onsubmit="PrepareFormOnsubmit()">
+    <div class="form-group row mb-3">
+        <label asp-for="@Model.CompanyID" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10 align-self-center">
+            <div class="input-group">
+                <select asp-for="@Model.CompanyID" class="form-control" asp-items="@Model.CompanySelectList" onchange="OnChangeCompanyID()">
+                    <option value="" selected disabled hidden>@Localizer["Chooze a company"]</option>
+                </select>
+                <a class="btn btn-primary" id="CompanyIDCreateButton" type="button" asp-controller="@typeof(CompaniesController).GetNameOfController()" asp-action="@nameof(CompaniesController.Create)" asp-route-ReturnUrl="@currentUrl">@Localizer["Create"]</a>
+                <input class="btn btn-primary" id="CompanyIDClearButton" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#CompanyID'))" />
             </div>
-            <div class="form-group row">
-                <label asp-for="@Model.CompanyContactID" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                    <div class="input-group">
-                        <select asp-for="CompanyContactID" class="form-control" asp-items="@Model.CompanyContactSelectList" disabled>
-                            @if (Model.CompanyContactSelectList.Count() == 0)
-                            {
-                                <option value="0" selected disabled>@Localizer["No contacts"]</option>
-                            }
-                            else
-                            {
-                                <option value="0" selected disabled hidden>@Localizer["Choose a contact"]</option>
-                            }
-                        </select>
-                        @if (userCanCreateCompanyContacts)
-                        {
-                            <div class="input-group-append">
-                                <a class="btn btn-primary" id="CompanyContactIDCreateButton" type="button" asp-controller="@typeof(CompanyContactsController).GetNameOfController()" asp-action="@nameof(CompanyContactsController.Create)" asp-route-returnUrl="@currentUrl" hidden>Create</a>
-                            </div>
-                        }
-                        <div class="input-group-append">
-                            <input class="btn btn-primary" id="CompanyContactIDClearButton" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#CompanyContactID'))" disabled/>
-                        </div>
-                    </div>
-                    <span asp-validation-for="CompanyContactID" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label asp-for="IsActive" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                    <div class="input-group">
-                        <input asp-for="IsActive" class="form-check-inline" style="margin-left:0"/>
-                    </div>
-                    <span asp-validation-for="IsActive" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-sm-12">
-                    <button type="submit" class="btn btn-primary" style="width:auto">@Localizer["Save"]</button>
-                    <a href="@returnUrl" class="btn btn-primary" style="width:auto">@Localizer["Cancel"]</a>
-                </div>
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            </div>
-        </form>
+            <span asp-validation-for="@Model.CompanyID" class="text-danger"></span>
+        </div>
     </div>
-</div>
+    <div class="form-group row mb-3">
+        <label asp-for="@Model.CompanyContactID" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10 align-self-center">
+            <div class="input-group">
+                <select asp-for="CompanyContactID" class="form-control" asp-items="@Model.CompanyContactSelectList" onchange="OnChangeCompanyContactID()" disabled>
+                    @if (Model.CompanyContactSelectList.Count() == 0)
+                    {
+                        <option value="" selected disabled>@Localizer["No contacts"]</option>
+                    }
+                    else
+                    {
+                        <option value="" selected disabled hidden>@Localizer["Choose a contact"]</option>
+                    }
+                </select>
+                @if (userCanCreateCompanyContacts)
+                {
+                    <a class="btn btn-primary" id="CompanyContactIDCreateButton" type="button" asp-controller="@typeof(CompanyContactsController).GetNameOfController()" asp-action="@nameof(CompanyContactsController.Create)" asp-route-returnUrl="@currentUrl" hidden>@Localizer["Create"]</a>
+                }
+                <input class="btn btn-primary" id="CompanyContactIDClearButton" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#CompanyContactID'))" disabled/>
+            </div>
+            <span asp-validation-for="CompanyContactID" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group row mb-3">
+        <label asp-for="IsActive" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10 align-self-center">
+            <div class="input-group">
+                <input asp-for="IsActive" class="form-check-inline" style="margin-left:0"/>
+            </div>
+            <span asp-validation-for="IsActive" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-12">
+            <button type="submit" class="btn btn-primary" style="width:auto">@Localizer["Save"]</button>
+            <a href="@returnUrl" class="btn btn-primary" style="width:auto">@Localizer["Cancel"]</a>
+        </div>
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    </div>
+</form>
 
 @section Scripts{
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/js/OnClickClear.js"></script>
-    <script type="module" src="~/js/ExamCenter/OnChangeCompanyID.js"></script>
+    <script type="module" src="~/js/ExamCenters/PrepareFormOnsubmit.js"></script>
+    <script type="module" src="~/js/ExamCenters/OnChangeCompanyID.js"></script>
+    <script type="module" src="~/js/ExamCenters/OnChangeCompanyContactID.js"></script>
 }
