--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Account/Register.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Account/Register.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-md-12">
         <form method="post">
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="Email" class="col-2"></label>
                 <div class="col-10">
                     @if (Model.Email != null)
@@ -25,42 +25,42 @@
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="FirstName" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="FirstName" class="form-control" />
                     <span asp-validation-for="FirstName" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="LastName" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="LastName" class="form-control" />
                     <span asp-validation-for="LastName" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="Birthday" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="Birthday" class="form-control" />
                     <span asp-validation-for="Birthday" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="JobTitle" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="JobTitle" class="form-control" />
                     <span asp-validation-for="JobTitle" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="MobilePhone" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="MobilePhone" class="form-control" />
                     <span asp-validation-for="MobilePhone" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="BusinessPhone" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="BusinessPhone" class="form-control" />
@@ -71,7 +71,7 @@
             <h3>@Localizer["Company"]</h3>
             <hr />
 
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="CompanyName" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="CompanyName" class="form-control" list="CompanyNameOptions" />
@@ -84,49 +84,49 @@
                     <span asp-validation-for="CompanyName" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="BusinessAddress" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="BusinessAddress" class="form-control" />
                     <span asp-validation-for="BusinessAddress" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="BusinessAddressPostalCode" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="BusinessAddressPostalCode" class="form-control" />
                     <span asp-validation-for="BusinessAddressPostalCode" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="BusinessAddressCity" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="BusinessAddressCity" class="form-control" />
                     <span asp-validation-for="BusinessAddressCity" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="BusinessAddressCountry" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="BusinessAddressCountry" class="form-control" />
                     <span asp-validation-for="BusinessAddressCountry" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="CompanyMainPhone" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="CompanyMainPhone" class="form-control" />
                     <span asp-validation-for="CompanyMainPhone" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="CompanyEmail" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="CompanyEmail" class="form-control" />
                     <span asp-validation-for="CompanyEmail" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="WebPage" class="col-2"></label>
                 <div class="col-10">
                     <input asp-for="WebPage" class="form-control col-10" />
