--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Companies/Create.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Companies/Create.cshtml
@@ -1,79 +1,70 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
-@model CompanyCreateViewModel
+﻿@model CompanyCreateViewModel
 
 @{
     ViewData["Title"] = "Create company";
     string returnUrl = ViewBag.ReturnUrl;
     string currentUrl = ViewBag.CurrentUrl;
-    var userCanCreateAddresses = User.CanCreate(ClaimsTypesStore.Addresses);
+
+    bool userCanCreateAddresses = User.CanCreate(ClaimsTypesStore.Addresses);
 }
 
 <h1>@Localizer["Create company"]</h1>
 <hr />
-<div class="row">
-    <div class="col-md-12">
-        <form asp-controller="@typeof(CompaniesController).GetNameOfController()" asp-action="@nameof(CompaniesController.Create)" asp-route-returnUrl="@returnUrl" method="post">
-            <div class="form-group row">
-                <label asp-for="CompanyName" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                    <input asp-for="CompanyName" class="form-control" placeholder="@Localizer["Company Name"]" />
-                </div>
-                <span asp-validation-for="CompanyName" class="text-danger"></span>
-            </div>
-            <div class="form-group row">
-                <label asp-for="CompanyMainPhone" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                    <input asp-for="CompanyMainPhone" class="form-control" placeholder="@Localizer["Company Main Phone"]" />
-                </div>
-                <span asp-validation-for="CompanyMainPhone" class="text-danger"></span>
-            </div>
-            <div class="form-group row">
-                <label asp-for="CompanyEmail" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                    <input asp-for="CompanyEmail" class="form-control" placeholder="@Localizer["Company Email"]" />
-                </div>
-                <span asp-validation-for="CompanyEmail" class="text-danger"></span>
-            </div>
-            <div class="form-group row">
-                <label asp-for="WebPage" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                    <input asp-for="WebPage" class="form-control" placeholder="@Localizer["Web page"]" />
-                </div>
-                <span asp-validation-for="WebPage" class="text-danger"></span>
-            </div>
-            <h4>@Localizer["Business Address"]</h4>
-            <div class="form-group row">
-                <label asp-for="AddressID" class="col-sm-2 col-form-label"></label>
-                <div class="input-group col-sm-10">
-                    <Select asp-for="AddressID" class="form-control" asp-items="@Model.AddressSelectList">
-                        <option value="" selected disabled hidden>@Localizer["Choose address"]</option>
-                    </Select>
-                    @if(userCanCreateAddresses)
-                    {
-                        <div class="input-group-append">
-                            <a class="btn btn-primary" asp-controller="@typeof(AddressesController).GetNameOfController()" asp-action="@nameof(AddressesController.Create)" asp-route-returnUrl="@currentUrl">Create</a>
-                        </div>
-                    }
-                    <div class="input-group-append">
-                        <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
-                    </div>
-                </div>
-                <span asp-validation-for="AddressID" class="text-danger"></span>
-            </div>
-            <div class="form-group row">
-                <div class="col-sm-12">
-                    <button type="submit" class="btn btn-primary" style="width:auto">@Localizer["Save"]</button>
-                    <a href="@returnUrl" class="btn btn-primary" style="width:auto">@Localizer["Cancel"]</a>
-                </div>
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            </div>
-        </form>
+<form asp-controller="@typeof(CompaniesController).GetNameOfController()" asp-action="@nameof(CompaniesController.Create)" asp-route-returnUrl="@returnUrl" method="post">
+    <div class="form-group row mb-3">
+        <label asp-for="CompanyName" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10 align-self-center">
+            <input asp-for="CompanyName" class="form-control" placeholder="@Localizer["Company Name"]" />
+            <span asp-validation-for="CompanyName" class="text-danger"></span>
+        </div>
     </div>
-</div>
+    <div class="form-group row mb-3">
+        <label asp-for="CompanyMainPhone" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10 align-self-center">
+            <input asp-for="CompanyMainPhone" class="form-control" placeholder="@Localizer["Company Main Phone"]" />
+            <span asp-validation-for="CompanyMainPhone" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group row mb-3">
+        <label asp-for="CompanyEmail" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10 align-self-center">
+            <input asp-for="CompanyEmail" class="form-control" placeholder="@Localizer["Company Email"]" />
+            <span asp-validation-for="CompanyEmail" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group row mb-3">
+        <label asp-for="WebPage" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10 align-self-center">
+            <input asp-for="WebPage" class="form-control" placeholder="@Localizer["Web page"]" />
+            <span asp-validation-for="WebPage" class="text-danger"></span>
+        </div>
+    </div>
+    <h4>@Localizer["Business Address"]</h4>
+    <div class="form-group row mb-3">
+        <label asp-for="AddressID" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10 align-self-center">
+            <div class="input-group">
+                <Select asp-for="AddressID" class="form-control" asp-items="@Model.AddressSelectList">
+                    <option value="" selected disabled hidden>@Localizer["Choose address"]</option>
+                </Select>
+                @if(userCanCreateAddresses)
+                {
+                    <a class="btn btn-primary" asp-controller="@typeof(AddressesController).GetNameOfController()" asp-action="@nameof(AddressesController.Create)" asp-route-returnUrl="@currentUrl">@Localizer["Create"]</a>
+                }
+                <input class="btn btn-primary" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#AddressID'))" />
+            </div>
+            <span asp-validation-for="AddressID" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-12">
+            <button type="submit" class="btn btn-primary" style="width:auto">@Localizer["Save"]</button>
+            <a href="@returnUrl" class="btn btn-primary" style="width:auto">@Localizer["Cancel"]</a>
+        </div>
+    </div>
+</form>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-
-    <script src="~/js/ResetSelect.js"></script>
+    <script src="~/js/OnClickClear.js"></script>
 }
