--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Companies/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Companies/Details.cshtml
@@ -1,11 +1,10 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
-@model CompanyDetailsViewModel
+﻿@model CompanyDetailsViewModel
 
 @{
     ViewData["Title"] = Localizer["Company Details"];
     var returnUrl = ViewBag.ReturnUrl;
     var currentUrl = ViewBag.CurrentUrl;
+
     var userCanEditCompanies = User.CanEdit(ClaimsTypesStore.Companies);
 }
 
