--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Examinations/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Examinations/Details.cshtml
@@ -1,10 +1,7 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
-@inject IViewLocalizer Localizer
-@model ExaminationDetailsViewModel
+﻿@model ExaminationDetailsViewModel
 
 @{
-    ViewData["Title"] = @Localizer["Examination Details"];
-
+    ViewData["Title"] = Localizer["Examination Details"];
     var returnUrl = ViewBag.ReturnUrl;
     var currentUrl = ViewBag.CurrentUrl;
     var userCanEditExaminations = User.CanEdit(ClaimsTypesStore.Examinations);
@@ -18,7 +15,7 @@
 
 <h1>@Localizer["Examination Details"]</h1>
 <hr />
-<div>
+<div class="mb-3">
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ExamDate)
@@ -39,18 +36,17 @@
             @Html.DisplayFor(model => model.TrainingCenterName)
         </dd>
     </dl>
+    <div>
+        @if (userCanEditExaminations)
+        {
+            <a asp-controller="@typeof(ExaminationsController).GetNameOfController()" asp-action="@nameof(ExaminationsController.Edit)"
+               asp-route-id="@Model.EncryptedID" asp-route-returnUrl="@currentUrl" class="btn btn-primary" style="width:auto">@Localizer["Edit"]</a>
+        }
+        <a class="btn btn-primary" style="width:auto" href="@returnUrl">
+            @Localizer["Back"]
+        </a>
+    </div>
 </div>
-<div>
-    @if (userCanEditExaminations)
-    {
-        <a asp-controller="@typeof(ExaminationsController).GetNameOfController()" asp-action="@nameof(ExaminationsController.Edit)"
-           asp-route-id="@Model.EncryptedID" asp-route-returnUrl="@currentUrl" class="btn btn-primary" style="width:auto">@Localizer["Edit"]</a>
-    }
-    <a class="btn btn-primary" style="width:auto" href="@returnUrl">
-        @Localizer["Back"]
-    </a>
-</div>
-<br />
 <h2>@Localizer["PE Certificates"]</h2>
 @if (userCanCreateCertificates)
 {
@@ -61,7 +57,6 @@
         </a>
     </p>
 }
-
 <table class="table">
     <thead>
         <tr>
