--- a/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Create.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Create.cshtml
@@ -13,23 +13,19 @@
 <div class="row">
     <div class="col-md-12">
         <form enctype="multipart/form-data" asp-controller="@typeof(PEPassportsController).GetNameOfController()"
-              asp-action="@nameof(PEPassportsController.Create)" asp-route-returnUrl="@returnUrl" method="post" class="mt-3">
-            <div class="form-group row">
+              asp-action="@nameof(PEPassportsController.Create)" asp-route-returnUrl="@returnUrl" method="post">
+            <div class="form-group row mb-3">
                 <label asp-for="AVNumber" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span id="LetterSpan" class="input-group-text">@Model.Letter</span>
-                        </div>
-                        <div class="input-group-prepend">
-                            <input asp-for="Letter" class="form-control" readonly hidden/>
-                        </div>
+                        <span id="LetterSpan" class="input-group-text">@Model.Letter</span>
+                        <input asp-for="Letter" class="form-control" readonly hidden/>
                         <input asp-for="AVNumber" class="form-control" placeholder="AV number">
                     </div>
                     <span asp-validation-for="AVNumber" class="text-danger"></span>
-                </div>"
+                </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="TrainingCenterID" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <div class="input-group">
@@ -37,18 +33,14 @@
                             <option value="" selected disabled hidden>@Localizer["Choose Training Center"]</option>
                         </select>
                         @if(userCanCreateTrainingCenters){
-                            <div class=" input-group-append">
-                                <a id="TrainingCenterSelect" asp-controller="@typeof(TrainingCentersController).GetNameOfController()" asp-action="@nameof(TrainingCentersController.Create)" asp-route-returnUrl="@currentUrl" class="btn btn-primary" type="button">@Localizer["Create"]</a>
-                            </div>
+                            <a id="TrainingCenterSelect" asp-controller="@typeof(TrainingCentersController).GetNameOfController()" asp-action="@nameof(TrainingCentersController.Create)" asp-route-returnUrl="@currentUrl" class="btn btn-primary" type="button">@Localizer["Create"]</a>
                         }
-                        <div class="input-group-append">
-                            <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
-                        </div>
+                        <input class="btn btn-primary" type="button" value="@Localizer["Clear"]" />
                     </div>
                     <span asp-validation-for="TrainingCenterID" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="PEWelderID" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <div class="input-group">
@@ -57,18 +49,14 @@
                         </select>
                         @if(userCanCreateWelders)
                         {
-                            <div class=" input-group-append">
-                                <a asp-controller="@typeof(WeldersController).GetNameOfController()" asp-action="@nameof(WeldersController.Create)" asp-route-returnUrl="@currentUrl" class="btn btn-primary" type="button">@Localizer["Create"]</a>
-                            </div>
+                            <a asp-controller="@typeof(WeldersController).GetNameOfController()" asp-action="@nameof(WeldersController.Create)" asp-route-returnUrl="@currentUrl" class="btn btn-primary" type="button">@Localizer["Create"]</a>
                         }
-                        <div class="input-group-append">
-                            <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
-                        </div>
+                        <input class="btn btn-primary" type="button" value="@Localizer["Clear"]" />
                     </div>
                     <span asp-validation-for="PEWelderID" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <div class="col-sm-10">
                     <button type="submit" class="btn btn-primary" style="width:auto">@Localizer["Save"]</button>
                     <a href="@returnUrl" class="btn btn-primary" style="width:auto">@Localizer["Cancel"]</a>
@@ -86,5 +74,4 @@
     <script src="~/js/PEPassports/GetTrainingCenterLetterByTrainingCenterID.js"></script>
     <script src="~/js/PEPassports/GetPEPassportMaxAVNumber.js"></script>
     <script src="~/js/Welders/GetWeldersNotFromTrainingCenterID.js"></script>
-    <script src="~/js/ResetSelect.js"></script>
 }
