--- a/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Details.cshtml
@@ -15,52 +15,52 @@
 
 <h1>@Localizer["PE Passport Details"]</h1>
 <hr />
-<dl class="row">
-    <dt class="col-sm-3">
-        @Html.DisplayNameFor(model => model.AVNumber)
-    </dt>
-    <dd class="col-sm-9">
-        @Html.DisplayFor(model => model.Letter)
-        @Html.DisplayFor(model => model.AVNumber)
-    </dd>
-    <dt class="col-sm-3">
-        @Html.DisplayNameFor(model => model.FirstName)
-    </dt>
-    <dd class="col-sm-9">
-        @Html.DisplayFor(model => model.FirstName)
-    </dd>
-    <dt class="col-sm-3">
-        @Html.DisplayNameFor(model => model.LastName)
-    </dt>
-    <dd class="col-sm-9">
-        @Html.DisplayFor(model => model.LastName)
-    </dd>
-    <dt class="col-sm-3">
-        @Html.DisplayNameFor(model => model.NationalNumber)
-    </dt>
-    <dd class="col-sm-9">
-        @Html.DisplayFor(model => model.NationalNumber)
-    </dd>
-    <dt class="col-sm-3">
-        @Html.DisplayNameFor(model => model.IdNumber)
-    </dt>
-    <dd class="col-sm-9">
-        @Html.DisplayFor(model => model.IdNumber)
-    </dd>
-</dl>
-<div>
-    @if (userCanEditPEPassports)
-    {
-        <a asp-controller="@typeof(PEPassportsController).GetNameOfController()" asp-action="@nameof(PEPassportsController.Edit)"
-           asp-route-id="@Model.EncryptedID" asp-route-returnUrl="@currentUrl" class="btn btn-primary" style="width:auto">@Localizer["Edit"]</a>
-    }
-    <a class="btn btn-primary" style="width:auto" href="@returnUrl">
-        @Localizer["Back"]
-    </a>
+<div class="mb-3">
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.AVNumber)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Letter)
+            @Html.DisplayFor(model => model.AVNumber)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FirstName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.LastName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.NationalNumber)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.NationalNumber)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.IdNumber)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.IdNumber)
+        </dd>
+    </dl>
+    <div>
+        @if (userCanEditPEPassports)
+        {
+            <a asp-controller="@typeof(PEPassportsController).GetNameOfController()" asp-action="@nameof(PEPassportsController.Edit)"
+               asp-route-id="@Model.EncryptedID" asp-route-returnUrl="@currentUrl" class="btn btn-primary" style="width:auto">@Localizer["Edit"]</a>
+        }
+        <a class="btn btn-primary" style="width:auto" href="@returnUrl">
+            @Localizer["Back"]
+        </a>
+    </div>
 </div>
-<br />
 <h2>@Localizer["PE Certificates"]</h2>
-
 <table class="table">
     <thead>
         <tr>
