--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Shared/_Layout.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Shared/_Layout.cshtml
@@ -17,19 +17,19 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-toggleable-lg navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-lg bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="@typeof(PEPassportsController).GetNameOfController()"
                    asp-action="@nameof(PEPassportsController.Index)">Synergrid</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-lg-inline-flex flex-lg-row-reverse">
-                    <ul class="navbar-nav ml-auto">
+                <div class="navbar-collapse collapse d-lg-inline-flex flex-lg-row-reverse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto">
                         @await Html.PartialAsync("_SelectLanguagePartial")
                     </ul>
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ms-auto">
                         @if (signInManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
@@ -75,11 +75,10 @@
                             @if (User.IsInRole(RolesStore.Admin))
                             {
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle text-dark" href="#" id="navBarDropDownMenuLink"
-                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle text-dark" href="#" id="navBarDropDownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Admin
                                     </a>
-                                    <div class="dropdown-menu text-dark" aria-labelledby="navbarDropDownMenuLik">
+                                    <div class="dropdown-menu text-dark">
                                         <a class="dropdown-item text-dark" asp-area="" asp-controller="@typeof(AdminController).GetNameOfController()"
                                            asp-action="@nameof(AdminController.AppSettingsDetails)">@Localizer["App Settings"]</a>
                                         <a class="dropdown-item text-dark" asp-area="" asp-controller="@typeof(AdminController).GetNameOfController()"
@@ -108,14 +107,14 @@
             </a>
         </div>
     </footer>
-    <environment names="old">
-        <script src="~/lib/jquery/jquery.js" type="application/json" charset="utf-8"></script>
-        <script src="~/lib/jquery-validation/jquery.validate.js" defer></script>
-        <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js" defer></script>
+    <environment names="Development">
+        <script src="~/lib/jquery/jquery.js"></script>
+        <script src="~/lib/jquery-validation/jquery.validate.js"></script>
+        <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
         <script src="~/lib/bootstrap/js/bootstrap.bundle.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
-    <environment names="Development,Staging,Production">
+    <environment names="Staging,Production">
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js" integrity="sha384-UG8ao2jwOWB7/oDdObZc6ItJmwUkR/PfMyt9Qs5AwX7PsnYn1CRKCTWyncPTWvaS"
             asp-fallback-src="~/lib/jquery/jquery.min.js"
             crossorigin="anonymous"></script>
