--- a/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Details.cshtml
@@ -1,143 +1,145 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
-@model TrainingCenterDetailsViewModel
+﻿@model TrainingCenterDetailsViewModel
 
 @{
     ViewData["Title"] = Localizer["Training Center Details"];
     var returnUrl = ViewBag.ReturnUrl;
     var currentUrl = ViewBag.CurrentUrl;
+
     var userCanEditTrainingCenters = User.CanEdit(ClaimsTypesStore.TrainingCenters);
 }
 
 <h1>@Localizer["Training Center Details"]</h1>
 <hr />
-<dl class="row">
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Letter)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Letter)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.IsActive)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.IsActive)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.CompanyName)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.CompanyName)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.CompanyMainPhone)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.CompanyMainPhone)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.CompanyEmail)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.CompanyEmail)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.WebPage)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.WebPage)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.TrainingCenterAddress)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.TrainingCenterAddress)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.TrainingCenterAddressCity)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.TrainingCenterAddressCity)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.TrainingCenterAddressPostalCode)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.TrainingCenterAddressPostalCode)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.TrainingCenterAddressCountry)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.TrainingCenterAddressCountry)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.FirstName)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.FirstName)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.LastName)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.LastName)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Birthday)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Birthday)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Email)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.Email)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.JobTitle)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.JobTitle)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.BusinessPhone)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.BusinessPhone)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.MobilePhone)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.MobilePhone)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.BusinessAddress)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.BusinessAddress)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.BusinessAddressCity)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.BusinessAddressCity)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.BusinessAddressPostalCode)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.BusinessAddressPostalCode)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.BusinessAddressCountry)
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.BusinessAddressCountry)
-    </dd>
-</dl>
+<div class="mb-3">
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Letter)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Letter)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.IsActive)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.IsActive)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CompanyName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CompanyName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CompanyMainPhone)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CompanyMainPhone)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CompanyEmail)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CompanyEmail)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.WebPage)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.WebPage)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TrainingCenterAddress)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TrainingCenterAddress)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TrainingCenterAddressCity)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TrainingCenterAddressCity)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TrainingCenterAddressPostalCode)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TrainingCenterAddressPostalCode)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TrainingCenterAddressCountry)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TrainingCenterAddressCountry)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FirstName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.LastName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Birthday)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Birthday)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.JobTitle)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.JobTitle)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BusinessPhone)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.BusinessPhone)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MobilePhone)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MobilePhone)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BusinessAddress)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.BusinessAddress)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BusinessAddressCity)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.BusinessAddressCity)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BusinessAddressPostalCode)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.BusinessAddressPostalCode)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BusinessAddressCountry)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.BusinessAddressCountry)
+        </dd>
+    </dl>
+</div>
 <div>
     @if (userCanEditTrainingCenters)
     {
