--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Create.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Create.cshtml
@@ -9,40 +9,39 @@
 
 <h1>@Localizer["Create PE Welder"]</h1>
 <hr />
-<br />
 <div class="row">
     <div class="col-md-12">
         <form asp-controller="@typeof(WeldersController).GetNameOfController()"
-              asp-action="@nameof(WeldersController.Create)" asp-route-returnUrl="@returnUrl" method="post" class="mt-3">
-            <div class="form-group row">
+              asp-action="@nameof(WeldersController.Create)" asp-route-returnUrl="@returnUrl" method="post">
+            <div class="form-group row mb-3">
                 <label asp-for="FirstName" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input asp-for="FirstName" class="form-control" placeholder="Firstname" />
                 </div>
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="LastName" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input asp-for="LastName" class="form-control" placeholder="Lastname" />
                 </div>
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="NationalNumber" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input asp-for="NationalNumber" class="form-control" placeholder="National number" />
                 </div>
                 <span asp-validation-for="NationalNumber" class="text-danger"></span>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="IdNumber" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input asp-for="IdNumber" class="form-control" placeholder="ID-number" />
                 </div>
                 <span asp-validation-for="IdNumber" class="text-danger"></span>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <div class="col-sm-10">
                     <button type="submit" class="btn btn-primary" style="width:auto">@Localizer["Save"]</button>
                     <a href="@returnUrl" class="btn btn-primary" style="width:auto">@Localizer["Cancel"]</a>
