--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Details.cshtml
@@ -13,46 +13,45 @@
 
 <h1>@Localizer["Welder Details"]</h1>
 <hr />
-<br />
-<dl class="row">
-    <dt class="col-sm-3">
-        @Html.DisplayNameFor(model => model.FirstName)
-    </dt>
-    <dd class="col-sm-9">
-        @Html.DisplayFor(model => model.FirstName)
-    </dd>
-    <dt class="col-sm-3">
-        @Html.DisplayNameFor(model => model.LastName)
-    </dt>
-    <dd class="col-sm-9">
-        @Html.DisplayFor(model => model.LastName)
-    </dd>
-    <dt class="col-sm-3">
-        @Html.DisplayNameFor(model => model.NationalNumber)
-    </dt>
-    <dd class="col-sm-9">
-        @Html.DisplayFor(model => model.NationalNumber)
-    </dd>
-    <dt class="col-sm-3">
-        @Html.DisplayNameFor(model => model.IdNumber)
-    </dt>
-    <dd class="col-sm-9">
-        @Html.DisplayFor(model => model.IdNumber)
-    </dd>
-</dl>
-<div>
-    @if(UserCanEditWelders)
-    {
-        <a asp-controller="@typeof(WeldersController).GetNameOfController()" asp-action="@nameof(WeldersController.Edit)"
-           asp-route-id="@Model.EncryptedID" asp-route-returnUrl="@currentUrl" class="btn btn-primary" style="width:auto">@Localizer["Edit"]</a>
-    }
-    <a class="btn btn-primary" style="width:auto" href="@returnUrl">
-        @Localizer["Back"]
-    </a>
+<div class="mb-3">
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FirstName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.LastName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.NationalNumber)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.NationalNumber)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.IdNumber)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.IdNumber)
+        </dd>
+    </dl>
+    <div>
+        @if(UserCanEditWelders)
+        {
+            <a asp-controller="@typeof(WeldersController).GetNameOfController()" asp-action="@nameof(WeldersController.Edit)"
+                asp-route-id="@Model.EncryptedID" asp-route-returnUrl="@currentUrl" class="btn btn-primary" style="width:auto">@Localizer["Edit"]</a>
+        }
+        <a class="btn btn-primary" style="width:auto" href="@returnUrl">
+            @Localizer["Back"]
+        </a>
+    </div>
 </div>
-<br />
 <h2>@Localizer["PE Passports"]</h2>
-
 <table class="table">
     <thead>
         <tr>
