--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Edit.cshtml
@@ -9,42 +9,41 @@
 
 <h1>@Localizer["Edit PE Welder"]</h1>
 <hr />
-<br />
 <div class="row">
     <div class="col-md-12">
-        <form asp-controller="@typeof(WeldersController).GetNameOfController()" asp-action="@nameof(WeldersController.Edit)" asp-route-returnUrl="@returnUrl" method="post" class="mt-3">
+        <form asp-controller="@typeof(WeldersController).GetNameOfController()" asp-action="@nameof(WeldersController.Edit)" asp-route-returnUrl="@returnUrl" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input hidden asp-for="EncryptedID" />
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="FirstName" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input asp-for="FirstName" class="form-control" placeholder="Firstname" />
                 </div>
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="LastName" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input asp-for="LastName" class="form-control" placeholder="Lastname" />
                 </div>
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="NationalNumber" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input asp-for="NationalNumber" class="form-control" placeholder="National number" />
                 </div>
                 <span asp-validation-for="NationalNumber" class="text-danger"></span>
             </div>
-            <div class="form-group row">
+            <div class="form-group row mb-3">
                 <label asp-for="IdNumber" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <input asp-for="IdNumber" class="form-control" placeholder="ID-number" />
                 </div>
                 <span asp-validation-for="IdNumber" class="text-danger"></span>
             </div>
-            <div class="form-group row">
-                <div class="col-sm-10">
+            <div class="form-group row mb-3">
+                <div class="col-sm-12">
                     <button type="submit" class="btn btn-primary" style="width:auto">@Localizer["Save"]</button>
                     <a href="@returnUrl" class="btn btn-primary" style="width:auto">@Localizer["Cancel"]</a>
                 </div>
